Fixed layout bug in blogs grid

--- a/client/src/styles/_blog-card.scss
+++ b/client/src/styles/_blog-card.scss
@@ -1,12 +1,12 @@
 .blog-cards {
   display: grid;
-  grid-template-columns: 0.33fr 0.33fr 0.33fr;
+  grid-template-columns: 0.5fr 0.5fr;
   gap: 1.5rem;
 }
 
 .blog-card {
   overflow: hidden;
-  height: 450px;
+  height: 300px;
   width: 100%;
   margin: 2rem auto;
   border: 2px solid $color-secondary;
